Embedded logic from Lw* classes to usual